Working on this website

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,20 +7,34 @@ body {
   background: #fefefe;
   font-family: Inter;
 }
-nav {
-  margin-top: 16px;
-  width: 100%;
+header {
+  border-bottom: 2px solid #000000;
   display: flex;
 }
+.mainLogo {
+  max-width: 250px;
+  height: auto;
+}
+nav {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+  align-items: center;
+}
 nav ul {
-  
+  display: flex;
 }
 li {
   list-style: none;
 }
 li a {
   text-decoration: none;
-  font-family: Inter;
-  font-size: 1rem;
+  font-family: Inter, sans-serif;
+  font-size: 1.3rem;
   color: #000000;
+  margin: 0 12px;
+}
+li a:hover {
+  border-bottom: 4px solid #ce1126;
 }
